k8s /frontend-services.yaml
apiVersion: v1
kind: Service
metadata:
  name: frontend-blue
spec:
  type: ClusterIP
  selector:
    app: frontend
    color: blue
  ports:
    - port: 80
      targetPort: 80
---
apiVersion: v1
kind: Service
metadata:
  name: frontend-green
spec:
  type: ClusterIP
  selector:
    app: frontend
    color: green
  ports:
    - port: 80
      targetPort: 80
